[gd_scene load_steps=3 format=3 uid="uid://wtuiu7btb56u"]

[ext_resource type="Script" uid="uid://dmnsacwuium63" path="res://inventory/widgets/slotted_items/slotted_item.gd" id="1_oo4gx"]

[sub_resource type="LabelSettings" id="LabelSettings_oo4gx"]
line_spacing = 0.0
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="SlottedItem" type="MarginContainer"]
z_index = 2
custom_minimum_size = Vector2(40, 40)
offset_right = 44.0
offset_bottom = 44.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_oo4gx")

[node name="Image_TextureRect" type="TextureRect" parent="."]
layout_mode = 2
stretch_mode = 5

[node name="StackCount" type="Label" parent="."]
z_index = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 1
text = "99"
label_settings = SubResource("LabelSettings_oo4gx")
horizontal_alignment = 2
vertical_alignment = 2
